# digital-cards

./: .gitignore  pyproject.toml
app/: admin.py  models.py  urls.py  utils.py  views.py
app/migrations/: 0001_initial.py  0002_remove_client_fio_remove_client_position_and_more.py  0003_button_show.py  0004_remove_button_show.py  0005_button_logo_button_logo_url.py  0006_alter_button_logo_alter_button_logo_url_and_more.py
app/static/css/: style.css
config/: settings.py
templates/: index.html  user.html
