[tool.poetry]
name = "digital-cards"
version = "0.1.0"
description = ""
authors = ["my <jakha921@gmail.com>"]
readme = "README.md"
packages = [{include = "digital_cards"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.5"
pillow = "^10.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
